# container-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  container-manager.cabal  flake.nix
exe/: Cli.hs  Client.hs  Main.hs  Server.hs
nix/examples/: example.nix
nix/modules/: container-jails.nix  default.nix  pluto.nix
src/ContainerManager/: Cli.hs  Client.hs  Logger.hs  Mount.hs  Server.hs  Shared.hs  Types.hs
